# markdown2resume

./: .env.example  .gitignore  README.md  analyze_job_fit.py  check_ats.py  check_typos.py  compare_to_job.py  convert_to_docx.py  convert_to_pdf.py  pyproject.toml
data/: example_job_offer.md  example_resume.md
outputs/: example_comparison_report.md  example_job_fit_analysis.md  example_resume.docx  example_typo_report.md
